--- a/index.html
+++ b/index.html
@@ -38,7 +38,41 @@
             <h1>Эффективные решения для вашего бизнеса</h1>
             <button type="button">Заказать услугу</button>
         </section>
-        
+        <section>
+            <ul>
+                <li>
+                    <h2>Внимание к деталям</h2>
+                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
+                <li>
+                    <h2>Пунктуальность</h2>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                </li>
+                <li>
+                    <h2>Планирование</h2>
+                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                </li>
+                <li>
+                    <h2>Современные технологии</h2>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                </li>
+            </ul>
+            <h3>Чем мы занимаемся</h3>
+            <ul>
+                <li>
+                    <img src="/images/what-we-do-1.jpg" alt="Мужчина пишет код" width="370" height="294">
+                </li>
+                <li>
+                    <img src="/images/what-we-do-2.jpg" alt="Девушка держит телефон у ноутбука" width="370" height="294">
+                </li>
+                <li>
+                    <img src="/images/what-we-do-3.jpg" alt="Человек держит планшет в руках" width="370" height="294">
+                </li>
+            </ul>
+        </section>
+        <section>
+            
+        </section>
     </main>
 
 
