--- a/index.html
+++ b/index.html
@@ -41,37 +41,59 @@
         <section>
             <ul>
                 <li>
-                    <h2>Внимание к деталям</h2>
+                    <p>Внимание к деталям</p>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <h2>Пунктуальность</h2>
+                    <p>Пунктуальность</p>
                     <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <h2>Планирование</h2>
+                    <p>Планирование</p>
                     <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <h2>Современные технологии</h2>
+                    <p>Современные технологии</p>
                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
-            <h3>Чем мы занимаемся</h3>
+            <h2>Чем мы занимаемся</h2>
             <ul>
                 <li>
-                    <img src="/images/what-we-do-1.jpg" alt="Мужчина пишет код" width="370" height="294">
+                    <img src="images/what-we-do-1.jpg" alt="Мужчина пишет код" width="370" height="294">
                 </li>
                 <li>
-                    <img src="/images/what-we-do-2.jpg" alt="Девушка держит телефон у ноутбука" width="370" height="294">
+                    <img src="images/what-we-do-2.jpg" alt="Девушка держит телефон у ноутбука" width="370" height="294">
                 </li>
                 <li>
-                    <img src="/images/what-we-do-3.jpg" alt="Человек держит планшет в руках" width="370" height="294">
+                    <img src="images/what-we-do-3.jpg" alt="Человек держит планшет в руках" width="370" height="294">
                 </li>
             </ul>
         </section>
         <section>
-            
+            <h2>Наша команда</h2>
+            <ul>
+                <li>
+                    <img src="images/our-team-1.jpg" alt="Фотография Игоря Демьяненко" width="270" height="260">
+                    <h3>Игорь Демьяненко</h3>
+                    <p lang="en">Product Designer</p>
+                </li>
+                <li>
+                    <img src="images/our-team-2.jpg" alt="Фотография Ольги Репиной" width="270" height="260">
+                    <h3>Ольга Репина</h3>
+                    <p lang="en">Frontend Developer</p>
+                </li>
+                <li>
+                    <img src="images/our-team-3.jpg" alt="Фотография Николая Тарасова" width="270" height="260">
+                    <h3>Николай Тарасов</h3>
+                    <p lang="en">Marketing</p>
+                </li>
+                <li>
+                    <img src="images/our-team-4.jpg" alt="Фотография Михаила Ермакова" width="270" height="260">
+                    <h3>Михаил Ермаков</h3>
+                    <p lang="en">UI Designerr</p>
+                </li>
+            </ul>
         </section>
     </main>
 
