--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
         <section>
             <ul>
                 <li>
-                    <p>Внимание к деталям</p>
+                    <b>Внимание к деталям</b>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <p>Пунктуальность</p>
+                    <b>Пунктуальность</b>
                     <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <p>Планирование</p>
+                    <b>Планирование</b>
                     <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <p>Современные технологии</p>
+                    <b>Современные технологии</b>
                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
@@ -96,7 +96,20 @@
             </ul>
         </section>
     </main>
-
+<footer>
+    <a href="index.html">WebStudio</a>
+    <p>г. Киев, пр-т Леси Украинки, 26</p>
+    <address>
+        <ul>
+            <li>
+                <a href=mailto:"info@example.com">info@example.com</a>
+            </li>
+            <li>
+                <a href=tel:"+380991111111">+38 099 111 11 11</a>
+            </li>
+        </ul>
+    </address>
+</footer>
 
 </body>
 </html>
