--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         <address>
         <ul>
             <li>
-                <a href=mailto:"info@devstudio.com">info@devstudio.com</a>
+                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li>
-                <a href=tel:"+380961111111">+38 096 111 11 11</a>
+                <a href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
         </address>
@@ -102,10 +102,10 @@
     <address>
         <ul>
             <li>
-                <a href=mailto:"info@example.com">info@example.com</a>
+                <a href="mailto:info@example.com">info@example.com</a>
             </li>
             <li>
-                <a href=tel:"+380991111111">+38 099 111 11 11</a>
+                <a href="tel:+380991111111">+38 099 111 11 11</a>
             </li>
         </ul>
     </address>
