--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
                 </li>
             </ul>
         </nav>
-        <address>
         <ul>
             <li>
                 <a href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -31,32 +30,37 @@
                 <a href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
-        </address>
     </header>
     <main>
+        <!-- Hero  -->
         <section>
             <h1>Эффективные решения для вашего бизнеса</h1>
             <button type="button">Заказать услугу</button>
         </section>
+        <!-- Секция Чем мы занимаемся -->
         <section>
+            <h2 hidden>Наши преимущества</h2>
             <ul>
                 <li>
-                    <b>Внимание к деталям</b>
+                    <h3>Внимание к деталям</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <b>Пунктуальность</b>
+                    <h3>Пунктуальность</h3>
                     <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <b>Планирование</b>
+                    <h3>Планирование</h3>
                     <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <b>Современные технологии</b>
+                    <h3>Современные технологии</h3>
                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
+        </section>
+        <!-- Секция Чем мы занимаемся -->
+        <section>
             <h2>Чем мы занимаемся</h2>
             <ul>
                 <li>
@@ -70,6 +74,7 @@
                 </li>
             </ul>
         </section>
+        <!-- Секция Наша команда -->
         <section>
             <h2>Наша команда</h2>
             <ul>
@@ -98,9 +103,11 @@
     </main>
 <footer>
     <a href="index.html">WebStudio</a>
-    <p>г. Киев, пр-т Леси Украинки, 26</p>
     <address>
         <ul>
+            <li>
+                <a href="https://www.google.com/maps/place/Lesi+Ukrainky+Blvd,+26,+Kyiv,+02000/@50.4265807,30.5383858,17z/data=!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">г. Киев, пр-т Леси Украинки, 26</a>
+            </li>
             <li>
                 <a href="mailto:info@example.com">info@example.com</a>
             </li>
