--- a/index.html
+++ b/index.html
@@ -5,29 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Студия</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header>
         <nav>
-            <a href="./index.html">WebStudio</a>
-            <ul>
-                <li>
-                    <a href="">Студия</a>
+            <a href="./index.html" class="logo link"><span class="accent-logo">Web</span>Studio</a>
+            <ul class="nav link">
+                <li class="nav-item">
+                    <a class="nav-item-link link" href="">Студия</a>
                 </li>
-                <li>
-                    <a href="">Портфолио</a>
+                <li class="nav-item">
+                    <a class="nav-item-link link" href="">Портфолио</a>
                 </li>
-                <li>
-                    <a href="">Контакты</a>
+                <li class="nav-item">
+                    <a class="nav-item-link link" href="">Контакты</a>
                 </li>
             </ul>
         </nav>
-        <ul>
-            <li>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <ul class="second-address">
+            <li class="second-address-item">
+                <a class="second-address-item-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
-            <li>
-                <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <li class="second-address-item">
+                <a class="second-address-item-link link" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
     </header>
@@ -102,7 +107,7 @@
         </section>
     </main>
 <footer>
-    <a href="index.html">WebStudio</a>
+    <a href="index.html" class="logo link"><span class="accent-logo">Web</span>Studio</a>
     <address>
         <ul>
             <li>
