--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <nav>
             <a href="./index.html" class="logo link"><span class="accent-logo">Web</span>Studio</a>
-            <ul class="nav link">
+            <ul class="nav link list">
                 <li class="nav-item">
                     <a class="nav-item-link link" href="">Студия</a>
                 </li>
@@ -27,100 +27,105 @@
                 </li>
             </ul>
         </nav>
-        <ul class="second-address">
+        <ul class="second-address list">
             <li class="second-address-item">
-                <a class="second-address-item-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="second-address-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
             <li class="second-address-item">
-                <a class="second-address-item-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+                <a class="second-address-link link" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
     </header>
     <main>
         <!-- Hero  -->
-        <section>
-            <h1>Эффективные решения для вашего бизнеса</h1>
-            <button type="button">Заказать услугу</button>
+        <section class="hero-section">
+            <h1 class="hero">Эффективные решения для вашего бизнеса</h1>
+            <button class="hero-btn btn" type="button">Заказать услугу</button>
         </section>
         <!-- Секция Чем мы занимаемся -->
         <section>
             <h2 hidden>Наши преимущества</h2>
-            <ul>
-                <li>
-                    <h3>Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            <ul class="benefits list">
+                <li class="benefits-list">
+                    <h3 class="benefits-title">Внимание к деталям</h3>
+                    <p class="benefits-desc">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
-                <li>
-                    <h3>Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                <li class="benefits-list">
+                    <h3 class="benefits-title">Пунктуальность</h3>
+                    <p class="benefits-desc">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
-                <li>
-                    <h3>Планирование</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                <li class="benefits-list">
+                    <h3 class="benefits-title">Планирование</h3>
+                    <p class="benefits-desc">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
-                <li>
-                    <h3>Современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                <li class="benefits-list">
+                    <h3 class="benefits-title">Современные технологии</h3>
+                    <p class="benefits-desc">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
         <!-- Секция Чем мы занимаемся -->
         <section>
-            <h2>Чем мы занимаемся</h2>
-            <ul>
-                <li>
+            <h2 class="activity header">Чем мы занимаемся</h2>
+            <ul class="activity-list list">
+                <li class="activity-item">
                     <img src="images/what-we-do-1.jpg" alt="Мужчина пишет код" width="370" height="294">
                 </li>
-                <li>
+                <li class="activity-item">
                     <img src="images/what-we-do-2.jpg" alt="Девушка держит телефон у ноутбука" width="370" height="294">
                 </li>
-                <li>
+                <li class="activity-item">
                     <img src="images/what-we-do-3.jpg" alt="Человек держит планшет в руках" width="370" height="294">
                 </li>
             </ul>
         </section>
         <!-- Секция Наша команда -->
-        <section>
-            <h2>Наша команда</h2>
-            <ul>
-                <li>
+        <section class="our-team">
+            <h2 class="team header">Наша команда</h2>
+            <ul class="team-list list">
+                <li class="team-item">
                     <img src="images/our-team-1.jpg" alt="Фотография Игоря Демьяненко" width="270" height="260">
-                    <h3>Игорь Демьяненко</h3>
-                    <p lang="en">Product Designer</p>
+                    <h3 class="team-member">Игорь Демьяненко</h3>
+                    <p class="team-desc" lang="en">Product Designer</p>
                 </li>
-                <li>
+                <li class="team-item">
                     <img src="images/our-team-2.jpg" alt="Фотография Ольги Репиной" width="270" height="260">
-                    <h3>Ольга Репина</h3>
-                    <p lang="en">Frontend Developer</p>
+                    <h3 class="team-member">Ольга Репина</h3>
+                    <p class="team-desc" lang="en">Frontend Developer</p>
                 </li>
-                <li>
+                <li class="team-item">
                     <img src="images/our-team-3.jpg" alt="Фотография Николая Тарасова" width="270" height="260">
-                    <h3>Николай Тарасов</h3>
-                    <p lang="en">Marketing</p>
+                    <h3 class="team-member">Николай Тарасов</h3>
+                    <p class="team-desc" lang="en">Marketing</p>
                 </li>
-                <li>
+                <li class="team-item">
                     <img src="images/our-team-4.jpg" alt="Фотография Михаила Ермакова" width="270" height="260">
-                    <h3>Михаил Ермаков</h3>
-                    <p lang="en">UI Designerr</p>
+                    <h3 class="team-member">Михаил Ермаков</h3>
+                    <p class="team-desc" lang="en">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
 <footer>
-    <a href="index.html" class="logo link"><span class="accent-logo">Web</span>Studio</a>
-    <address>
-        <ul>
-            <li>
-                <a href="https://www.google.com/maps/place/Lesi+Ukrainky+Blvd,+26,+Kyiv,+02000/@50.4265807,30.5383858,17z/data=!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">г. Киев, пр-т Леси Украинки, 26</a>
-            </li>
-            <li>
-                <a href="mailto:info@example.com">info@example.com</a>
-            </li>
-            <li>
-                <a href="tel:+380991111111">+38 099 111 11 11</a>
-            </li>
-        </ul>
-    </address>
+    <div class="address-section">
+        <a href="index.html" class="logo link"><span class="accent-logo">Web</span>Studio</a>
+        <address>
+            <ul class="main-address list">
+                <li class="main-address-item">
+                    <a class="main-address-link link"
+                        href="https://www.google.com/maps/place/Lesi+Ukrainky+Blvd,+26,+Kyiv,+02000/@50.4265807,30.5383858,17z/data=!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858">г.
+                        Киев, пр-т Леси Украинки, 26</a>
+                </li>
+                <li class="main-address-item">
+                    <a class="main-address-link link address-specialty" href="mailto:info@example.com">info@example.com</a>
+                </li>
+                <li class="main-address-item">
+                    <a class="main-address-link link address-specialty" href="tel:+380991111111">+38 099 111 11 11</a>
+                </li>
+            </ul>
+        </address>
+    </div>
+    
 </footer>
 
 </body>
