Portfolio html+css

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <a href="./index.html" class="logo link"><span class="accent-logo">Web</span>Studio</a>
             <ul class="nav link list">
                 <li class="nav-item">
-                    <a class="nav-item-link link" href="">Студия</a>
+                    <a class="nav-item-link link" href="./index.html">Студия</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-item-link link" href="">Портфолио</a>
+                    <a class="nav-item-link link" href="./portfolio.html">Портфолио</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-item-link link" href="">Контакты</a>
